crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_builtin_seq_rev.rs
fn main() {
    //@ assert seq_rev([1i32, 2i32]) == [2i32, 1i32];
}
